--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -9,7 +9,7 @@ fi
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
 
 # Path to your oh-my-zsh installation.
-export ZSH="${HOME}/.oh-my-zsh"
+export ZSH="{{ .chezmoi.homedir }}/.oh-my-zsh"
 
 # Set name of the theme to load --- if set to "random", it will
 # load a random theme each time oh-my-zsh is loaded, in which case,
@@ -85,34 +85,15 @@ source $ZSH/oh-my-zsh.sh
 # export MANPATH="/usr/local/man:$MANPATH"
 
 # You may need to manually set your language environment
-# export LANG=en_US.UTF-8
-
-# Preferred editor for local and remote sessions
-# if [[ -n $SSH_CONNECTION ]]; then
-#   export EDITOR='vim'
-# else
-#   export EDITOR='mvim'
-# fi
-
-# Compilation flags
-# export ARCHFLAGS="-arch x86_64"
-
-# Set personal aliases, overriding those provided by oh-my-zsh libs,
-# plugins, and themes. Aliases can be placed here, though oh-my-zsh
-# users are encouraged to define aliases within the ZSH_CUSTOM folder.
-# For a full list of active aliases, run `alias`.
-#
-# Example aliases
-# alias zshconfig="mate ~/.zshrc"
-# alias ohmyzsh="mate ~/.oh-my-zsh"
+export LANG=en_US.UTF-8
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
 # The next line updates PATH for the Google Cloud SDK.
-if [ -f "${HOME}/Stuff/google-cloud-sdk/path.zsh.inc" ]; then . "${HOME}/Stuff/google-cloud-sdk/path.zsh.inc"; fi
+if [ -f "{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/path.zsh.inc" ]; then . "{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/path.zsh.inc"; fi
 
 # The next line enables shell command completion for gcloud.
-if [ -f "${HOME}/Stuff/google-cloud-sdk/completion.zsh.inc" ]; then . "${HOME}/Stuff/google-cloud-sdk/completion.zsh.inc"; fi
+if [ -f "{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/completion.zsh.inc" ]; then . "{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/completion.zsh.inc"; fi
 
-. ${HOME}/.config/custom/main.zsh
+. {{ .chezmoi.homedir }}/.config/custom/main.zsh
