--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -13,6 +13,7 @@ antigen use oh-my-zsh
 antigen bundle git
 antigen bundle command-not-found
 antigen bundle docker
+antigen bundle kubectl
 
 antigen bundle zsh-users/zsh-completions
 antigen bundle zsh-users/zsh-autosuggestions
