--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -27,3 +27,9 @@ source "{{ .chezmoi.homedir }}/.config/custom/main.zsh"
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+
+# The next line updates PATH for the Google Cloud SDK.
+if [ -f '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/path.zsh.inc' ]; then . '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/path.zsh.inc'; fi
+
+# The next line enables shell command completion for gcloud.
+if [ -f '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/completion.zsh.inc' ]; then . '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/completion.zsh.inc'; fi
