--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -4,3 +4,8 @@
 [gitget]
     root = {{ .chezmoi.homedir }}/code
     skip-host = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
