--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,8 +1,8 @@
 [user]
 	email = {{ .email }}
-	name = Aleksei Olshanskii
+	name = Aleksei Olshanskiy
 [gitget]
-    root = {{ .chezmoi.homedir }}/code
+    root = {{ .chezmoi.homeDir }}/Git
     skip-host = true
 [filter "lfs"]
 	clean = git-lfs clean -- %f
