--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -5,7 +5,7 @@ if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 fi
 
-source "{{ .chezmoi.homedir }}/.zsh/antigen.zsh"
+source "{{ .chezmoi.homeDir }}/.zsh/antigen.zsh"
 
 # Load oh-my-zsh library.
 antigen use oh-my-zsh
@@ -23,13 +23,13 @@ antigen theme romkatv/powerlevel10k
 
 antigen apply
 
-source "{{ .chezmoi.homedir }}/.config/custom/main.zsh"
+source "{{ .chezmoi.homeDir }}/.config/custom/main.zsh"
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
 # The next line updates PATH for the Google Cloud SDK.
-if [ -f '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/path.zsh.inc' ]; then . '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/path.zsh.inc'; fi
+if [ -f '{{ .chezmoi.homeDir }}/Stuff/google-cloud-sdk/path.zsh.inc' ]; then . '{{ .chezmoi.homeDir }}/Stuff/google-cloud-sdk/path.zsh.inc'; fi
 
 # The next line enables shell command completion for gcloud.
-if [ -f '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/completion.zsh.inc' ]; then . '{{ .chezmoi.homedir }}/Stuff/google-cloud-sdk/completion.zsh.inc'; fi
+if [ -f '{{ .chezmoi.homeDir }}/Stuff/google-cloud-sdk/completion.zsh.inc' ]; then . '{{ .chezmoi.homeDir }}/Stuff/google-cloud-sdk/completion.zsh.inc'; fi
