--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -2,7 +2,7 @@
 	email = {{ .email }}
 	name = Aleksei Olshanskiy
 [gitget]
-    root = {{ .chezmoi.homeDir }}/Git
+    root = {{ .homeDir }}/Git
     skip-host = true
 [filter "lfs"]
 	clean = git-lfs clean -- %f
