--- a/config/.chezmoi.toml.tmpl
+++ b/config/.chezmoi.toml.tmpl
@@ -5,3 +5,4 @@
     workEmail = {{ promptString "work email" | quote }}
     workSignKey = {{ promptString "work signing key" | quote }}
     workGit = {{ promptString "work git domain" | quote }}
+    workGitToken = {{ promptString "work git token" | quote }}
