--- a/config/.chezmoi.toml.tmpl
+++ b/config/.chezmoi.toml.tmpl
@@ -6,3 +6,5 @@
     workSignKey = {{ promptString "work signing key" | quote }}
     workGit = {{ promptString "work git domain" | quote }}
     workGitToken = {{ promptString "work git token" | quote }}
+    workArtifactory = {{ promptString "work artifactory domain" | quote }}
+    workArtifactoryToken = {{ promptString "work artifactory token" | quote }}
